# clarc

./: .gitignore  INSTALL  LICENSE  README.md  build.html  index.html  style.css
acceptance/: .gitignore  generateFiles.js  testServer.js
src/: CMakeLists.txt  Makefile  amazonCredentials.cc  amazonCredentials.h  amzHeaders.cc  amzHeaders.h  base64.c  base64.h  clarc.1  curlResponse.c  curlResponse.h  deleter.cc  deleter.h  destination.cc  destination.h  fileListStorage.cc  fileListStorage.h  filePattern.cc  filePattern.h  help.h  help.txt  localFileList.cc  localFileList.h  logger.c  logger.h  main.cc  makeHelpC.sh  memxor.c  memxor.h  microCurl.cc  microCurl.h  remoteListOfFiles.cc  remoteListOfFiles.h  settings.h  sha1.c  sslThreadLocks.h  threads.cc  threads.h  upload.cc  upload.h  (+2 more)
test/: Makefile  UploadTest.cc  amazonCredentials.cc  amazonCredentialsTest.cc  amzHeadersTest.cc  destinationTest.cc  fileListStorageTest.cc  localFileList.cc  localFileListTest.cc  microCurlTest.cc  remoteListOfFilesTest.cc  test.cc  test.h  uploadTest.cc  utilsTest.cc
test/data/list/: list-0.xml  list-1.xml
